--- a/arnulfur.css
+++ b/arnulfur.css
@@ -1,8 +1,8 @@
 /*FIXME farg o font!!!*/
 
 * {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 @media screen and (max-width: 850px) {
@@ -12,17 +12,70 @@
 }
 
 html {
-	background-image: url("bilder/vid.gif");
+	background-color: black;
+	/*background-image: url("bilder/img4.jpg");*/
 	min-height: 100%;
 	background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: top;
 }
 
 body {
 	font-family: "Open Sans", Helvetica Neue, Helvetica, sans-serif;
 	font-size: 1em;
+}
+
+.cb-slideshow, .cb-slideshow:after { 
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+	z-index: 0; 
+}
+
+.cb-slideshow li span { 
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	color: transparent;
+	background-size: cover;
+	background-position: top;
+	background-repeat: none;
+	opacity: 0;
+	z-index: 0;
+	animation: imageAnimation 15s linear infinite 0s; 
+}
+
+.cb-slideshow li:nth-child(1) span { 
+	background-image: url("bilder/img4.jpg");
+}
+
+.cb-slideshow li:nth-child(2) span { 
+	background-image: url("bilder/img5.jpg");
+	animation-delay: 5s; 
+}
+.cb-slideshow li:nth-child(3) span { 
+	background-image: url("bilder/img6.jpg");
+	animation-delay: 10s; 
+}
+
+@keyframes imageAnimation { 
+	0% {
+		opacity: 0; animation-timing-function: ease-in;
+	} 16% {
+		opacity: 1; animation-timing-function: ease-out;
+	} 33% { opacity: 1 
+	} 49% { opacity: 0 
+	} 100% { opacity: 0 
+		Z}
+}
+
+.no-cssanimations .cb-slideshow li span {
+	opacity: 1;
 }
 
 a:link {
@@ -36,23 +89,57 @@ a:visited {
 }
 
 a:hover {
+	text-decoration: underline;
+	color: #99CCFF;
+}
+
+a#arrow {
+	font-size: 1.5em;
+	color: white;
+}
+
+#arrow:hover {
+	text-decoration: none;
+	color: #99CCFF;
+}
+
+a#maillink {
+	color: white;
+	font-size: 1.1em;
+}
+
+#maillink:hover {
 	text-decoration: none;
 	color: #99CCFF;
 }
 
 /*.active {
-	color: #fff499 !important;  FFA500
+	color: #fff499 !important;	FFA500
 }*/
 
 .headerlist ul a {
 	color: #FFFFFF;
 	padding: 0%;
 	margin: 0%;
-	font-size: 0.8em;
+	font-size: 0.9em;
+	text-shadow: 1px 1px 1px #000; 
 }
 
 .headerlist ul a:hover {
 	color: #fff499 !important;	
+}
+
+.headerlist img {
+	margin-right: 2%;
+}
+
+div.buttons {
+	clear: both;
+	float: right;
+	display: inline-block;
+    vertical-align: middle;
+	float: right;
+	padding-right: 1%;
 }
 
 div.content {
@@ -66,45 +153,43 @@ div.yellow_header {
 	padding-bottom: 3%;
 }
 
-div.blue {
-	background: #A9A9F5;
-	color: #FFFFFF;
-}
-
 div.light {
+	overflow: hidden;
 	background: rgba(255, 255, 255, 0.98);
 	height: auto;
 	overflow: auto;
+	padding-bottom: 5%;
 }
 
-div.left {
-	float: left;
-	width: 85%;
-}
-
-div.right {
-	float: right;
-	width: 12%;
-	padding-right: 1%;
+#contact {
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
 }
 
 div.logo {
+	clear: left;
 	float: left;
-	width: 60%;
+	width: 20%;
 }
 
 div.headerlist {
+	clear: right;
 	float: right;
-	width: 40%;
+	width: 50%;
+}
+
+#like {
+	float: right;
+	clear: right;
 }
 
 div.footer {
+	overflow: hidden;
 	border-top: solid 3px #A9A9F5;
 	font-family: "Arvo", Helvetica Neue, Helvetica, sans-serif;
 }
 
 .footer a {
-	color: #fff499;
+	color: rgba(146, 195, 244, 1);
 }
 
 .footer a:hover {
@@ -114,9 +199,9 @@ div.footer {
 .footer p {
 	font-weight: bolder;
 	margin: 0;
-	padding: 0.3% 1% 0.3% 1%;
+	padding: 2%;
 	font-size: 0.8em;
-	color: #FFA500;
+	color: rgba(255, 254, 220, 0.98);
 }
 
 .footer #footerleft {
@@ -127,7 +212,7 @@ div.footer {
 	float: right;
 }
 
-div.wrapper {    
+div.wrapper {	
 	position: absolute;
 	top: 100%;
 	background: rgba(150, 150, 150, 0.85);
@@ -138,14 +223,46 @@ div.vertcent {
 }
 
 div.scroll {
+	overflow: hidden;
+	text-shadow: 1px 1px 1px #000; 
+	padding-top: 1%;
 	text-align: center;
 	height: 12%;
 	position: absolute;
 	bottom: 0;
 	width: 100%;
 	color: white;
-	font-size: 2em;
-	font-family: "Amatic", Helvetica Neue, Helvetica, sans-serif;
+	font-size: 2.2em;
+	font-family: "Amatic SC", Helvetica Neue, Helvetica, sans-serif;
+}
+
+#testamonials {
+	overflow: hidden;
+	position: relative;
+	height: 220px;
+	text-align: center;
+	padding: 3%;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+}
+
+#testamonials > div {
+	vertical-align: middle;
+	position: absolute;
+	margin: 3%;
+}
+
+#testamonials p.rev {
+	padding-top: 4%;
+	font-family: "Arvo", Helvetica Neue, Helvetica, sans-serif;
+	color: #FF8000;
+	font-style: italic;
+}
+
+#testamonials p.nam {
+	font-size: 0.9em;
+	padding-top: 1%;
+	color: black;
+	text-align: right;
 }
 
 fieldset {
@@ -156,7 +273,6 @@ fieldset {
 }
 
 form {
-	padding-bottom: 20%;
 	font-family: "Arvo", Helvetica Neue, Helvetica, sans-serif;
 }
 
@@ -208,20 +324,30 @@ h2.yellow {
 	text-align: center;
 }
 
+h3.yellow {
+	color: rgba(146, 195, 244, 1);
+}
+
 h2.darker {
 	color: #FFFFCC;
 	text-align: right;
 }
 
+h3.darker {
+	font-family: "Arvo", Helvetica Neue, Helvetica, sans-serif;
+	color: #FFFFCC;
+}
+
 header {
-	/*background-color: rgba(54, 128, 191, 1);*/
-    width: 100%;
-  	text-align: center;
-  	position: fixed;
-  	margin: 0;
-  	z-index: 1;
-  	padding: 1%;
-  	font-size: 1.7em;
+	/*background: rgba(120, 120, 120, 0.4);*/
+	/*border-bottom: solid 0.07em #FFFFFF;*/
+	width: 100%;
+	text-align: center;
+	position: fixed;
+	margin: 0;
+	z-index: 1;
+	padding: 1%;
+	font-size: 1.7em;
 }
 
 hr {
@@ -242,14 +368,36 @@ hr.darker {
 
 .headerlist ul li {
 	display: inline;
-	font-family: "Amatic", Helvetica Neue, Helvetica, sans-serif;
+	font-family: "Amatic SC", Helvetica Neue, Helvetica, sans-serif;
 	padding-right: 1.5%;
 	padding-left: 1.5%;
 }
 
+img.between {
+	width: 100%;
+	z-index: 0;
+	border-top: solid 3px #A9A9F5;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+}
+
+img#logo {
+	width: 100%;
+}
+
+img#facebook {
+	border-radius: 50%;
+}
+
 p {
 	padding-top: 7%;
-	padding-bottom: 20%;
+}
+
+p#about {
+	padding-bottom: 10%;
+}
+
+p#events {
+	padding-bottom: 10%;
 }
 
 p#topform {
